Wrapped everything inside the function so that it will not be global. Also fixed some minor issues.

--- a/public/notify.css
+++ b/public/notify.css
@@ -1,13 +1,3 @@
-#notification-container {
-	position: fixed; 
-	top: 10px; 
-	width: 440px; 
-	z-index: 1000;
-	display: flex; 
-	justify-content: center; 
-	align-items: center;
-}
-
 .popup {
     position: fixed;
     top: 15%;
@@ -35,23 +25,3 @@
 .popup.hide {
     opacity: 0;
 }
-
-#modal {
-	display: flex;
-	position: fixed;
-	top: 15%;
-	left: 50%; 
-	transform: translate(-50%, -50%);
-	padding: 10px; 
-	border-radius: 10px; 
-	background-color: #dec4ec;
-	opacity: 0;
-	transition: opacity 0.5s;
-	width: 400px; 
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	margin: 11px;
-	opacity: 1;
-}
-
